--- a/signin.css
+++ b/signin.css
@@ -1,3 +1,16 @@
 body{
+   color: #45502d;
    background-color:#7B8A40 ;
+}
+
+h1{
+   font-family: 'Inter';
+   font-style: italic;
+   color:#45502d ;
+}
+
+.button{
+  
+   color:#7B8A40 ;
+   background-color: #45502d;
 }
