--- a/signin.css
+++ b/signin.css
@@ -1,16 +1,41 @@
 body{
+  
    color: #45502d;
    background-color:#7B8A40 ;
 }
 
 h1{
+   font-size: 2.5rem;
    font-family: 'Inter';
    font-style: italic;
    color:#45502d ;
+}
+@media(min-width:40rem) {
+   h1 {
+      font-size: 3rem;
+   }
 }
 
 .button{
   
    color:#7B8A40 ;
    background-color: #45502d;
+}
+
+.img{
+   align-content: center;
+   height: 20vh;
+   width: 200px;
+
+}
+
+@media(min-width:40rem) {
+   .img {
+      height: 300px;
+      width: 400px
+   }
+}
+
+.navbar-brand{
+   font-size: small;
 }
