--- a/signin.css
+++ b/signin.css
@@ -5,14 +5,14 @@ body{
 }
 
 h1{
-   font-size: 2.5rem;
+   font-size: small;
    font-family: 'Inter';
    font-style: italic;
    color:#45502d ;
 }
 @media(min-width:40rem) {
    h1 {
-      font-size: 3rem;
+      font-size: 2rem;
    }
 }
 
@@ -37,5 +37,5 @@ h1{
 }
 
 .navbar-brand{
-   font-size: small;
+   font-size: x-small;
 }
